--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -27,6 +27,7 @@
 
         <button class="btn btn-lg btn-primary btn-block form-group" type="submit">Entrar</button>
         <div class="checkbox mb-3"> <a href="/Home/LembrarSenha">Esqueci minha senha</a> </div>
+        <div class="checkbox mb-3"> <a href="/Home/SolicitarConvite">Solicitar um convite de acesso</a> </div>
     </form>
 </div>
 
