--- a/Views/Presenca/PresencaGrupo.cshtml
+++ b/Views/Presenca/PresencaGrupo.cshtml
@@ -1,6 +1,7 @@
 @model List<GEM.Repository.UsuarioPresenca> 
 @{
     Layout = null;
+    //var lista = Model.OrderBy(o=>o.Nome).ToList();
 }
 
 <div class="row">
