--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -102,6 +102,8 @@
                                     @if(sessao.Dev()){
                                         <a class="dropdown-item" href="/TipoEstudo">Tipo de Aula</a>
                                     }
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="/Monitor">Monitoramento</a>
                                 </div>
                             </li>
                         }
