--- a/Views/Comum/Edit.cshtml
+++ b/Views/Comum/Edit.cshtml
@@ -32,7 +32,7 @@
             Name="Estado",
             OnChange="EditComumChange(this)",
             Items=GEM.Repository.Estado.List().Select(e=>new ComboItem(){Text=e.Nome,Value=e.Sigla.ToString()}).ToList(),
-            SelectedItem=Model.Estado.ToString()            
+            SelectedItem=Model.Estado            
         })
     </div> 
     <div class="form-group col-sm-12">
