--- a/Views/Presenca/ListaAulaGrupo.cshtml
+++ b/Views/Presenca/ListaAulaGrupo.cshtml
@@ -4,18 +4,18 @@
 }
 
 <div class="row">
-    <div class="form-group col-sm-4">
+    <div class="form-group col-sm-3">
             <label>Tipo</label>
             @await Html.PartialAsync("~/Views/Shared/_Combo.cshtml", new GEM.Models.Combo(){
                     Class="form-control",
                     Name="estudo.Cod_Tipo",
-                    OnChange="TipoChange(this)",
+                    OnChange="AulaGrupoTipoChange(this)",
                     Items=GEM.Repository.TipoEstudo.List().Select(e=>new ComboItem(){Text=e.Nome,Value=e.Cod_Tipo.ToString()}).ToList()
                 })
         </div>
-        <div class="form-group col-sm-2">
-            <label id="Controle">Número</label>
-            <input type="number" class="form-control" name="estudo.Numero">
+        <div id="AulaGrupoControle" class="form-group col-sm-3">
+            <label>Número</label>
+            <input type="number" class="form-control number" name="estudo.Numero" onkeypress="NumberKeyPress(event);">
         </div>
         <div class="form-group col-sm-5">
             <label>Observação</label>
@@ -32,8 +32,7 @@
         <table class="table ">
             <thead>
             <tr>
-                <th>Tipo</th>
-                <th>Controle</th>
+                <th>Descrição</th>
                 <th>Observação</th>
                 <th>Instrutor</th>
                 <th></th>
@@ -49,12 +48,18 @@
                     <input type="hidden" name="lista[@(i)].Cod_Tipo" value="@(item.Cod_Tipo)">
                     <input type="hidden" name="lista[@(i)].Tipo" value="@(item.Tipo)">
                     @item.Tipo
-                </td>
-                <td>
+                
                     <input type="hidden" name="lista[@(i)].Controle" value="@(item.Controle)">
                     <input type="hidden" name="lista[@(i)].Numero" value="@(item.Numero)">
-                    @string.Format("{0} {1}", item.Controle, item.Numero)
-
+                    @if(item.Tipo=="Hino"){
+                        @item.Numero
+                    }
+                    else if(item.Tipo =="Escala"){
+                        @string.Format("em {0}", GEM.Helpers.Util.NomeEscala(item.Numero))
+                    }
+                    else{
+                        @string.Format("{0} {1}", item.Controle, item.Numero)
+                    }
                 </td>
                 <td>
                     <input type="hidden" name="lista[@(i)].Observacao" value="@(item.Observacao)">
@@ -76,9 +81,9 @@
     </div>
 
 <script>
-    function TipoChange(e){
-        rsp.post({ Cod_Tipo : $(e).val() }, "/Presenca/Controle", (res)=>{
-        $("#Controle").html(res);
+    function AulaGrupoTipoChange(e){
+        rsp.post({ Cod_Tipo : $(e).val(), input_name : "estudo.Numero" }, "/Presenca/Controle", (res)=>{
+            $("#AulaGrupoControle").html(res);
         })
     }
 
